# signal-sema-upgrade

./: ARCHITECTURE.md  Cargo.toml  README.md  flake.nix
examples/: canonical.nota
src/: lib.rs
tests/: round_trip.rs
